test/tests/stages/6_statements_and_conditional_expressions/valid/if_nested.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[37]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(1)
  ;
  int
  identifier(b)
  =
  const int(0)
  ;
  if
  (
  identifier(a)
  )
  identifier(b)
  =
  const int(1)
  ;
  else
  if
  (
  identifier(b)
  )
  identifier(b)
  =
  const int(2)
  ;
  return
  identifier(b)
  ;
  }
