test/tests/stages/6_statements_and_conditional_expressions/invalid_parse/mismatched_nesting.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  if
  (
  const int(1)
  )
  return
  const int(1)
  ;
  else
  return
  const int(2)
  ;
  else
  return
  const int(3)
  ;
  }
